- https://github.com/eclipse-sirius/sirius-components/issues/1838[#1838] [diagram] Collapsing and expanding a node with unsynchronized child nodes will now properly restore the child nodes

=== New Features

- https://github.com/eclipse-sirius/sirius-components/issues/1695[#1695] [view] Add a precondition expression to the node description
- https://github.com/eclipse-sirius/sirius-components/issues/1527[#1527] [diagram] Add the new layout data structure which will be used by the new version of our layout algorithm.
This new data structure will be used by the frontend if the name of a diagram ends with `__EXPERIMENTAL`.
This will allow us to easily compare the current layout algorithm and the new one.

=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/593[#593] [domain] Add support for referencing and extending other custom domains
- https://github.com/eclipse-sirius/sirius-components/issues/1518[#1518] [project] Remove the "format all code" save action in order to let us write code without having to specify "@formatter:off" everywhere. It will also make it easier for us to use IDEs other than Eclipse to contribute to Sirius Web
- https://github.com/eclipse-sirius/sirius-components/issues/1632[#1632] [core] Start documenting the variables available for each operation in our various representations
- https://github.com/eclipse-sirius/sirius-components/issues/1565[1565] [view] The definition of the View DSL now uses richer data types for most attributes.
This has no visible effect at the moment, but will allow better documentation, validation and configuration later.
- [studio] Add a project template for the Papaya domains and view
- https://github.com/eclipse-sirius/sirius-components/issues/1667[#1667] [diagram] Make the contextual palette self contained 

== v2023.3.0

=== Architectural decision records

- [ADR-085] Add support for project templates
- [ADR-086] Add support of edges as targets of single click tools